k8s/apps/default/lldap/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
spec:
  selector:
    matchLabels:
      app: lldap
  replicas: 2
  template:
    metadata:
      labels:
        app: lldap
    spec:
      volumes:
        - name: data
          emptyDir: {}
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: lldap
      containers:
        - name: lldap
          image: ghcr.io/lldap/lldap:v0.5.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "5m"
              memory: "36Mi"
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 389
              name: ldap
              protocol: TCP
          envFrom: *envFrom
          volumeMounts:
            - mountPath: /data
              name: data
