k8s/apps/default/lldap/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  selector:
    app: lldap
  ports:
    - port: 80
      targetPort: http
      name: http
    - port: 389
      targetPort: ldap
      name: ldap
